@@ -1,7 +1,5 @@
 /*
- * Copyright (C) 2017-2019 HERE Europe B.V.
- * Copyright (C) 2019 Bosch Software Innovations GmbH
- * Copyright (C) 2020-2021 Bosch.IO GmbH
+ * Copyright (C) 2017 The ORT Project Authors (see <https://github.com/oss-review-toolkit/ort/blob/main/NOTICE>)
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,21 +17,23 @@
  * License-Filename: LICENSE
  */
 
-import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
-
 import java.nio.charset.Charset
 
+@Suppress("DSL_SCOPE_VIOLATION") // See https://youtrack.jetbrains.com/issue/KTIJ-19369.
 plugins {
     // Apply core plugins.
     application
 
     // Apply third-party plugins.
     alias(libs.plugins.graal)
-    alias(libs.plugins.shadow)
 }
 
 application {
     applicationName = "ort"
+    applicationDefaultJvmArgs = listOf(
+        "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
+        "--add-opens", "java.base/java.io=ALL-UNNAMED"
+    )
     mainClass.set("org.ossreviewtoolkit.cli.OrtMainKt")
 }
 
@@ -63,10 +63,6 @@ graal {
 
     mainClass("org.ossreviewtoolkit.cli.OrtMainKt")
     outputName("ort")
-}
-
-tasks.withType<ShadowJar>().configureEach {
-    isZip64 = true
 }
 
 tasks.named<CreateStartScripts>("startScripts").configure {
@@ -148,27 +144,21 @@ dependencies {
     implementation(project(":utils:ort-utils"))
     implementation(project(":utils:spdx-utils"))
 
+    implementation(platform(project(":plugins:package-curation-providers")))
+    implementation(platform(project(":plugins:package-managers")))
+
     implementation("org.jetbrains.kotlin:kotlin-reflect")
     implementation(libs.bundles.exposed)
+    implementation(libs.bundles.kotlinxSerialization)
     implementation(libs.clikt)
-    implementation(libs.config4k)
     implementation(libs.hikari)
+    implementation(libs.jacksonModuleKotlin)
     implementation(libs.kotlinxCoroutines)
-    implementation(libs.kotlinxSerialization)
     implementation(libs.log4jApiToSlf4j)
     implementation(libs.logbackClassic)
     implementation(libs.postgres)
     implementation(libs.reflections)
     implementation(libs.sw360Client)
 
-    testImplementation(project(":utils:test-utils"))
-
-    testImplementation(libs.greenmail)
-    testImplementation(libs.kotestAssertionsCore)
-    testImplementation(libs.kotestRunnerJunit5)
-
-    funTestImplementation(sourceSets["main"].output)
-    funTestImplementation(sourceSets["test"].output)
+    funTestImplementation(libs.greenmail)
 }
-
-configurations["funTestImplementation"].extendsFrom(configurations["testImplementation"])
